force-app/main/default/objects/SQX_Part__c/SQX_Part__c.object-meta.xml
<CustomObject>
    <label>Part</label>
    <nameField>
        <label>Part Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Parts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>