force-app/main/default/objects/SQX_Part__c/fields/SQX_Product__c.field-meta.xml
<CustomField>
    <fullName>SQX_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>SQX Part</relationshipLabel>
    <relationshipName>SQX_Part</relationshipName>
    <type>Lookup</type>
</CustomField>